# statutes-rags

./: .coverage  .env.example  .env.sample  .gitignore  DEEP-RESEARCH-PROMPT.md  Makefile  README-FIRST.md  README.md  START-HERE.md  USAGE.md  evaluation_results_20_fixed.json  pyproject.toml  pytest.ini  必ず最初に読んで下さい.md
app/core/: rag_config.py
app/retrieval/: __init__.py  base.py  bm25_retriever.py  hybrid_retriever.py  multi_query_retriever.py  query_processor.py  rag_pipeline.py  reranker.py  vector_retriever.py
app/utils/: complexity_analyzer.py  number_normalizer.py  numeric_extractor.py  related_article_finder.py
data/: README.md
datasets/: README.md
datasets/egov_laws/: README.md
docs/: 01-README.md  02-SETUP.md  03-USAGE.md  04-TESTING.md  05-ARCHITECTURE.md  06-DEVELOPMENT.md  07-ALGORITHM.md  08-CODE-REFERENCE.md
docs/appendix/: evaluation_results_comprehensive.md  system_implementation_report.md  technical_insights_summary.md
docs/challenges/: README.md  domain-challenges-overview.md
docs/proposals/: README.md  agent-lightning-integration-proposal.md  agentic-rag-proposal.md  evaluation-framework-enhancement.md  mcp-server-integration.md
docs/supplemental/: README.md  code-fix-summary.md  evaluation-guide.md  final_evaluation_report.md  investigation_report.md  memory_issue_analysis.md  tokenizer-guide.md  verification_report.md
docs/方向性/: README.md  agent-lightning-integration-proposal.md  agentic-rag-proposal.md  (+2 more)
examples/: README.md  SETUP.md  TECH-RESEARCH.md
logs/: README.md
results/: README.md
scripts/: README.md  analyze_evaluation_results.py  build_index.py  compare_benchmark_results.py  evaluate.sh  evaluate_mcp_benchmark.py  evaluate_multiple_choice.py  evaluate_ragas.py  extract_lawqa_md.py  parse_egov_xml.py  preprocess_article_chunking.py  preprocess_egov_md.py  preprocess_egov_xml.py  query_cli.py  run_benchmark_comparison.sh  run_tests.sh  test_retrieval.py
setup/: restore_env.sh  setup_mecab.sh  setup_ollama.sh  setup_uv_env.sh
tests/: README.md  conftest.py  test_build_index_cli.py  test_config.py  test_preprocessing.py  test_rag_components.py  test_rag_pipeline.py  test_retrieval.py
(+167 files in other folders)
